# jedict_parser-rs

./: Cargo.toml  README.md  cargo_run.ps1
notes/: dom.md
src/: bridge_generated.io.rs  bridge_generated.rs  dict.rs  dom.rs  elements.rs  entities.rs  flutter_api.rs  flutter_log.rs  lib.rs  parser.rs
src/jmdict/: dict.rs  elements.rs  mod.rs
src/jndict/: dict.rs  elements.rs  mod.rs
src/kanjidic2/: dict.rs  elements.rs
